# knp-emi-cgx

./: .gitignore  README.md  conda-lock.yml  environment.yml  pyproject.toml  submesh_environment.yml
.github/workflow/: test-code-conda.yml
.github/workflows/: test-code-conda.yml  test-code-docker.yml  test-code.yml
src/CGx/EMI/: EMIx_ionic_model.py  EMIx_problem.py  EMIx_solver.py  GC_config.yaml  box_config.yml  circle_test.py  config.yaml  config.yml  main.py  square_test.py  sub_mesh_test.py
src/CGx/KNPEMI/: GC2_config.yaml  GC_config.yaml  KNPEMIx_ionic_model.py  KNPEMIx_problem.py  KNPEMIx_solver.py  WS_config.yaml  box_config.yml  config.yaml  main.py  main_mms.py  mms_config.yaml  plot_scaling.py  square_config.yaml  test_setup_config.yaml
src/CGx/utils/: astrocyte_meshing.py  calc_fluxes.py  combine_mesh_xdmfs.py  dfx_mesh_creation.py  emimesh_data.xlsx  errors.py  generate_square_mesh.py  membrane_ODE_systems.py  misc.py  mixed_dim_problem.py  plot_geometries.py  plot_geometry.py  plot_membrane_potentials.py  plot_membrane_potentials_geometry_variation.py  plot_mesh_data.py  plot_point.py  plot_point_checkpoint.py  plot_point_square.py  plot_slice_membrane.py  plot_slices.py  refine_mesh.py  (+4 more)
src/KNPEMI/: KNPEMIx_ionic_model.py  KNPEMIx_problem.py  KNPEMIx_solver.py  astrocyte_meshing.py  combine_mesh_xdmfs.py  generate_square_mesh.py  main.py  solver_config.yaml  utils_dfx.py
tests/: test_L2_norm_potentials.py  test_config.yml
tests/KNPEMI/: electric_potential_norms_direct_solver.py  electric_potential_norms_iterative_solver.py  ion_conservation.py
(+48 files in other folders)
