[project]
name = "CGx"
version = "0.0.3"
requires-python = ">=3.10"

# Path to README.md
readme = "README.md"

# Path to license file
license = {file = "LICENSE"}

# Direct dependencies
dependencies = [
    'pandas',
    'scipy',
    'numpy',
    'sympy',
    'gmsh',
    'lxml',
    'mpi4py',
    'multiphenicsx@git+https://github.com/multiphenics/multiphenicsx.git@v0.3.9',
    'matplotlib',
    'pyyaml',
    'scifem'
]
